# color-classifier-container

./: CMakeLists.txt  Dockerfile  build.sh  main.c  run.sh  run_docker.sh
src/: image.c  image.h  main.c
volume/: configuracion.config
